--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,8 @@
 /*min-width: 30px; !* TEST ONLY *!*/
 /*min-height: 70px; !* TEST ONLY *!*/
 
-/*background-color: rgba(100, 0, 0, 0.2); /* TEST ONLY */
-/*outline: 1px solid rgba(100, 0, 0, 0.8); !* TEST ONLY *!*/
-
-/*background-color: rgba(0, 100, 0, 0.2); /* TEST ONLY */
-/*outline: 1px solid rgba(0, 100, 0, 0.8); !* TEST ONLY *!*/
-
-/*background-color: rgba(0, 0, 100, 0.2); /* TEST ONLY */
-/*outline: 1px solid rgba(0, 0, 100, 0.8); !* TEST ONLY *!*/
+/*background-color: rgba(200, 200, 0, 0.2); !* TEST ONLY *!*/
+/*outline: 1px solid rgba(200, 200, 0, 0.8); !* TEST ONLY *!*/
 
 .main-header,
 main,
@@ -44,16 +38,16 @@ main .index-content .right-section {
 /* ===== GLOBAL ===== */
 /* ================== */
 
-body,
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-}
+/*body,*/
+/*h1, h2, h3, h4, h5, h6 {*/
+  /*margin: 0;*/
+/*}*/
 
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
+/*ul {*/
+  /*margin: 0;*/
+  /*padding: 0;*/
+  /*list-style: none;*/
+/*}*/
 
 .clearfix::after {
   content: "";
