--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ body {
   left: 20px;
   width: 18px;
   height: 16px;
-  background: transparent url(../img/sprite-icons.png) no-repeat -10px -125px;
+  background: transparent url(../img/sprite-icons.png) no-repeat -10px -294px;
   opacity: 0.3;
 }
 
@@ -314,6 +314,37 @@ main .index-content .photo .next {
   right: 0;
 }
 
+main .index-content .reserv input {
+  float: left;
+  box-sizing: border-box;
+  width: 140px;
+  padding: 7px 15px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+
+  font: inherit;
+  color: inherit;
+  text-transform: inherit;
+
+  background-color: #f9f6f3;
+  /*background-color: white;*/
+  border: 2px solid black;
+}
+
+main .index-content .reserv input:nth-child(2n) {
+  margin-right: 0;
+}
+
+main .index-content .reserv input:focus {
+  border: 2px solid #663d15;
+  /*border: 2px solid red;*/
+}
+
+main .index-content .reserv .btn {
+  /*clear: both;*/
+  width: 100%;
+}
+
 /* ======================== */
 /* ===== .main-footer ===== */
 /* ======================== */
@@ -322,8 +353,8 @@ main .index-content .photo .next {
   padding-top: 60px;
   padding-bottom: 40px;
 
-  background: #222222; /*todo: ...t=2:05...*/
-  color: white; /*todo: ...t=2:05...*/
+  background: #222222 url("../img/pattern-footer.png");
+  color: white;
 }
 
 /*- .contacts -*/
@@ -333,12 +364,67 @@ main .index-content .photo .next {
   width: 320px;
 }
 
+.main-footer .contacts a {
+  color: white;
+}
+
+.main-footer .contacts a:hover {
+  text-decoration: none;
+}
+
 /*- .social -*/
 
 .main-footer .social {
   float: left;
-  width: 140px;
+  width: 160px;
   margin-left: 80px; /* QUEST: ? */
+
+  text-align: center;
+}
+
+/*.main-footer .social p {*/
+/*margin: 0;*/
+/*margin-bottom: 15px;*/
+/*}*/
+
+.main-footer .social .btn-social {
+  display: inline-block;
+  width: 43px;
+  height: 43px;
+  margin: 0 2px;
+  font-size: 0;
+  text-decoration: none; /* ? */
+  vertical-align: top;
+  background: black url("../img/sprite-icons.png") no-repeat center;
+  transition: background-position 0.5s, background-color 0.5s;
+}
+
+.main-footer .social .btn-social:hover {
+  background-color: white;
+}
+
+.main-footer .social .btn-social.vk {
+  background-position: -10px -330px;
+}
+
+.main-footer .social .btn-social.vk:hover {
+  background-position: -10px -393px;
+}
+
+.main-footer .social .btn-social.fb {
+  background-position: -10px -42px;
+}
+
+.main-footer .social .btn-social.fb:hover {
+  background-position: -10px -105px;
+}
+
+.main-footer .social .btn-social.in {
+  background-position: -10px -168px;
+}
+
+.main-footer .social .btn-social.in:hover {
+  background-position: -10px -231px;
 }
 
 /*- .copyright -*/
@@ -346,4 +432,20 @@ main .index-content .photo .next {
 .main-footer .copyright {
   float: right;
   width: 140px;
+  text-align: center;
+}
+
+/*.main-footer .copyright p {*/
+/*margin: 0;*/
+/*margin-bottom: 15px;*/
+/*text-align: center;*/
+/*}*/
+
+/*.main-footer .copyright .btn {*/
+/*margin-right: 0;*/
+/*}*/
+
+.main-footer .copyright .btn:hover {
+  color: black;
+  background-color: white;
 }
