--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@
 body {
   min-width: 960px;
   font: bold 14px/24px 'PT Sans Narrow', sans-serif;
+  letter-spacing: 0.012em;
   text-transform: uppercase;
   color: white;
   background: black url("../img/main-bg.jpg") no-repeat center top;
@@ -122,7 +123,7 @@ body {
 
 .main-header .navigation a {
   display: block;
-  padding: 26px 20px;
+  padding: 26px 19px;
   text-decoration: none;
   color: white;
 }
@@ -193,7 +194,7 @@ main .logo {
 /*- .features -*/
 
 main .features {
-  margin-top: 25px;
+  margin-top: 22px;
 }
 
 main .features article {
@@ -209,8 +210,9 @@ main .features article:not(:last-child) {
 main .features article h3 {
   /*display: block;*/
   position: relative;
+  margin-top: 0;
   margin-bottom: 30px;
-  padding-bottom: 35px;
+  padding-bottom: 30px;
   font-size: 30px;
   line-height: 42px;
 }
@@ -231,14 +233,14 @@ main .features article h3::after {
 }
 
 main .features article p {
-  padding: 10px;
-  padding-bottom: 0;
+  margin: 0;
+  padding: 0 5px;
 }
 
 /*- .index-content -*/
 
 main .index-content:first-of-type {
-  margin-top: 80px;
+  margin-top: 76px;
 }
 
 main .index-content:not(:first-of-type) {
@@ -246,7 +248,7 @@ main .index-content:not(:first-of-type) {
 }
 
 main .index-content {
-  padding: 50px 80px;
+  padding: 47px 80px 50px 80px;
   color: black;
   background: url("../img/separate-line.png") no-repeat center,
   #f8f5f2 url("../img/pattern-bg.jpg");
@@ -254,7 +256,7 @@ main .index-content {
 
 main .index-content h2 {
   margin: 0;
-  margin-bottom: 25px;
+  margin-bottom: 19px;
   font-size: 30px;
   line-height: 42px;
 }
@@ -275,7 +277,11 @@ main .index-content .right-section {
 }
 
 main .index-content .news article {
-  margin-bottom: 25px;
+  margin-bottom: 21px;
+}
+
+main .index-content .news article:last-of-type {
+  margin-bottom: 28px;
 }
 
 main .index-content .news article p {
@@ -350,11 +356,15 @@ main .index-content .reserv .btn {
 /* ======================== */
 
 .main-footer {
-  padding-top: 60px;
+  padding-top: 58px;
   padding-bottom: 40px;
 
   background: #222222 url("../img/pattern-footer.png");
   color: white;
+}
+
+.main-footer p {
+  margin: 0;
 }
 
 /*- .contacts -*/
@@ -377,15 +387,14 @@ main .index-content .reserv .btn {
 .main-footer .social {
   float: left;
   width: 160px;
-  margin-left: 80px; /* QUEST: ? */
+  margin-left: 70px; /* QUEST: ? */
 
   text-align: center;
 }
 
-/*.main-footer .social p {*/
-/*margin: 0;*/
-/*margin-bottom: 15px;*/
-/*}*/
+.main-footer .social p {
+  margin-bottom: 14px;
+}
 
 .main-footer .social .btn-social {
   display: inline-block;
@@ -431,8 +440,12 @@ main .index-content .reserv .btn {
 
 .main-footer .copyright {
   float: right;
-  width: 140px;
+  max-width: 180px;
   text-align: center;
+}
+
+.main-footer .copyright p {
+  margin-bottom: 14px;
 }
 
 /*.main-footer .copyright p {*/
@@ -441,11 +454,12 @@ main .index-content .reserv .btn {
 /*text-align: center;*/
 /*}*/
 
-/*.main-footer .copyright .btn {*/
-/*margin-right: 0;*/
-/*}*/
+.main-footer .copyright .btn {
+margin-right: 0;
+}
 
 .main-footer .copyright .btn:hover {
+
   color: black;
   background-color: white;
 }
