--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ body {
   background: black url("../img/main-bg.jpg") no-repeat center top;
 }
 
+body.inner-page {
+  color: black;
+  background: #f8f5f2 url("../img/pattern-bg.jpg") repeat;
+}
+
 .btn {
   display: inline-block;
   margin-right: 16px;
@@ -57,7 +62,7 @@ body {
   color: white;
 }
 
-.main-header a:hover {
+.main-header a:not(.logo):hover {
   background-color: #242424;
   /* TODO: add animation */
 }
@@ -77,13 +82,39 @@ body {
 }
 
 .main-header .navigation li {
+  /*position: relative; !* .active *!*/
   display: inline-block;
   vertical-align: top;
 }
 
-.main-header .navigation li a {
+.main-header .navigation a {
   display: block;
   padding: 26px 19px;
+}
+
+.main-header .navigation .active {
+  position: relative;
+  /*background-color: transparent;*/
+}
+
+.main-header .navigation .active a:hover {
+  background-color: transparent;
+}
+
+.main-header .navigation .active::after {
+  position: absolute;
+  content: "";
+  right: 20px;
+  left: 20px;
+  bottom: 0;
+  height: 5px;
+  background-color: white;
+}
+
+.main-header .navigation .logo {
+  float: left;
+  padding-top: 22px;
+  padding-bottom: 21px;
 }
 
 /* --- .user-block --- */
@@ -123,6 +154,11 @@ body {
 main {
   padding-top: 60px;
   padding-bottom: 65px;
+}
+
+.inner-page main {
+  padding-top: 52px;
+  padding-bottom: 73px;
 }
 
 /* --- .logo --- */
@@ -285,6 +321,175 @@ main .index-content .reserv .btn {
   width: 100%; /* border-box ??? */
 }
 
+/* --- .inner-page-header --- */
+
+main .inner-page-header h1 {
+  margin: 0;
+  /*padding: 0;*/
+  font-size: 30px;
+  line-height: 42px;
+}
+
+main .inner-page-header .breadcrumbs {
+  margin: 0;
+  margin-top: 14px;
+  padding: 0;
+  list-style: none;
+}
+
+main .inner-page-header .breadcrumbs li {
+  position: relative;
+  float: left;
+  padding-right: 23px;
+  margin-right: 15px;
+}
+
+main .inner-page-header .breadcrumbs li:not(:last-of-type)::after {
+  position: absolute;
+  content: "";
+  right: 0;
+  top: 50%;
+  width: 8px;
+  height: 8px;
+  margin-top: -5px;
+  /*margin-left: -4px;*/
+  background-color: black;
+  transform: rotate(45deg);
+}
+
+main .inner-page-header .breadcrumbs li a {
+  color: black;
+  text-decoration: none;
+}
+
+main .inner-page-header .breadcrumbs li a.current {
+  color: #aba9a7;
+}
+
+main .inner-page-header .breadcrumbs li a:hover {
+  text-decoration: underline;
+}
+
+/* --- .inner-content --- */
+
+main .inner-content {
+  /*margin-top: 47px;*/
+}
+
+/*main .inner-content h2 {*/
+/*!*position: relative;*!*/
+/*!*margin: 0;*!*/
+/*text-align: center;*/
+/*font-size: 48px;*/
+/*line-height: 48px;*/
+/*}*/
+
+main .inner-content .big-heading {
+  position: relative;
+  margin-top: 47px;
+  margin-bottom: 61px;
+  text-align: center;
+}
+
+main .inner-content .big-heading h2 {
+  position: relative;
+  z-index: 2;
+  display: inline-block;
+  margin: 0;
+  padding: 0 28px;
+  font-size: 48px;
+  line-height: 48px;
+  background: #f8f5f2 url("../img/pattern-bg.jpg") repeat;
+}
+
+main .inner-content h3 {
+  margin-top: 55px;
+  margin-bottom: 30px;
+  font-size: 24px;
+  line-height: 30px;
+}
+
+main .inner-content .big-heading::after {
+  position: absolute;
+  content: "";
+  z-index: 1;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  border-bottom: 2px solid black;
+}
+
+main .inner-content table {
+  border-collapse: collapse;
+}
+
+main .inner-content table td {
+  padding: 8px 15px;
+  border: 2px solid black;
+}
+
+main .inner-content .custom-list-1 {
+  margin: 14px 0;
+  padding: 0;
+  list-style: none;
+}
+
+main .inner-content .custom-list-1 li {
+  position: relative;
+  padding-left: 20px;
+  margin-bottom: 13px;
+}
+
+main .inner-content .custom-list-1 li:before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 7px;
+  width: 8px;
+  height: 8px;
+  transform: rotate(45deg);
+  background-color: black;
+}
+
+main .inner-content .price-table {
+  width: 100%;
+}
+
+main .inner-content .price-table td {
+  width: 50%;
+}
+
+main .inner-content .price-table td:last-of-type {
+  text-align: center;
+}
+
+main .inner-content .inner-column-left,
+main .inner-content .inner-column-right {
+  width: 460px;
+}
+
+main .inner-content .inner-column-left {
+  float: left;
+}
+
+main .inner-content .inner-column-right {
+  float: right;
+}
+
+main .inner-content .inner-column-left *:first-child,
+main .inner-content .inner-column-right *:first-child {
+  margin-top: 0;
+}
+
+main .inner-content .inner-column-left *:last-child,
+main .inner-content .inner-column-right *:last-child {
+  margin-bottom: 0;
+}
+
+main .inner-content .short-text {
+  padding-right: 65px;
+}
+
 /* ======================== */
 /* ===== .main-footer ===== */
 /* ======================== */
@@ -293,6 +498,11 @@ main .index-content .reserv .btn {
   padding-top: 58px;
   padding-bottom: 40px;
   background: #222222 url("../img/pattern-footer.png");
+  color: white;
+}
+
+.main-footer.inner-page-footer {
+  box-shadow: inset 0 30px 40px -15px black;
 }
 
 .main-footer p { /* QUEST: tag? */
