--- a/css/style.css
+++ b/css/style.css
@@ -598,3 +598,184 @@ main .inner-content .short-text {
   color: black;
   background-color: white;
 }
+
+/* ================= */
+/* ===== modal ===== */
+/* ================= */
+
+.modal-close {
+  position: absolute;
+  top: 5px;
+  right: -37px;
+  width: 30px;
+  height: 30px;
+  /*background-color: green;*/
+  background-color: transparent;
+  font-size: 0;
+  border: none;
+}
+
+.modal-close::before,
+.modal-close::after {
+  position: absolute;
+  content: "";
+  left: 2px;
+  top: 13px;
+  width: 26px;
+  height: 4px;
+  background-color: #d0d0d0;
+  border-radius: 1px;
+}
+
+.modal-close::before {
+  transform: rotate(45deg);
+}
+
+.modal-close::after {
+  transform: rotate(-45deg);
+}
+
+/* --- .modal-login --- */
+
+.modal-login {
+  z-index: 110;
+  display: none;
+  position: absolute;
+  top: 120px;
+  left: 50%;
+  width: 300px;
+  /*height: 200px;*/
+  padding: 50px 80px;
+  transform: translate(-50%, 0);
+  background: #f8f5f2 url("../img/pattern-bg.jpg") repeat;
+  color: black;
+  box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+}
+
+.modal-login h2 {
+  margin: 0;
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.modal-login p {
+  margin-top: 20px;
+}
+
+.modal-login form {
+  margin-top: 20px;
+}
+
+.modal-login input[type="text"],
+.modal-login input[type="password"] {
+  box-sizing: border-box;
+  width: 100%;
+  font: inherit;
+  /*font-size: 14px;*/
+  /*line-height: 24px;*/
+  text-transform: inherit;
+  color: inherit;
+  border: 2px solid black;
+  margin-bottom: 10px;
+  background-color: #f8f5f2;
+  padding: 10px 40px 8px 15px;
+}
+
+.modal-login input:focus {
+  border-color: RED;
+}
+
+.modal-login input.login {
+  background-image: url("../img/icon-login.png");
+  background-repeat: no-repeat;
+  background-position: 270px center;
+}
+
+.modal-login input.pass {
+  background-image: url("../img/icon-pass.png");
+  background-repeat: no-repeat;
+  background-position: 270px center;
+}
+
+.modal-login .restore {
+  float: right;
+  color: black;
+}
+
+.modal-login .btn {
+  width: 100%;
+  margin-top: 15px;
+}
+
+.modal-login input[type="checkbox"] {
+  display: none;
+}
+
+.modal-login .login-check {
+  position: relative;
+  padding-left: 30px;
+  cursor: pointer;
+}
+
+.modal-login .login-check:hover {
+  color: #663d15;
+}
+
+/*.modal-login input[type="checkbox"] + .check-target {*/
+.modal-login .check-target {
+  position: absolute;
+  /*content: "";*/
+  top: -3px;
+  left: 0;
+  width: 17px;
+  height: 17px;
+  border: 2px solid black;
+}
+
+.modal-login input[type="checkbox"]:checked + .check-target::before,
+.modal-login input[type="checkbox"]:checked + .check-target::after {
+  position: absolute;
+  content: "";
+  top: 8px;
+  left: 1px;
+  width: 15px;
+  height: 2px;
+  background-color: black;
+}
+
+.modal-login input[type="checkbox"]:checked + .check-target::before {
+  transform: rotate(45deg);
+}
+
+.modal-login input[type="checkbox"]:checked + .check-target::after {
+  transform: rotate(-45deg);
+}
+
+/* --- .modal-map --- */
+
+.modal-map {
+  display: none;
+  z-index: 110;
+  position: fixed;
+  width: 766px;
+  height: 561px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #e9e5dc url("../img/map.jpg");
+  border: 7px solid white;
+  box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+}
+
+/* --- .modal-overlay --- */
+
+.modal-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background: rgba(0, 0, 0, 0.5);
+}
