css for shop.html (crutch)

--- a/css/style.css
+++ b/css/style.css
@@ -599,6 +599,101 @@ main .inner-content .short-text {
   background-color: white;
 }
 
+/* --- .main-shop --- */
+
+main.main-shop {
+  padding-bottom: 50px;
+}
+
+.main-shop .filter {
+  float: left;
+  width: 220px;
+  margin-top: 46px;
+}
+
+.main-shop .filter h2 {
+  margin: 0;
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.main-shop .shop {
+  float: right;
+  width: 700px;
+  margin-top: 51px;
+  font-size: 0;
+}
+
+.main-shop .shop .item {
+  display: inline-block;
+  vertical-align: top;
+  width: 220px;
+  margin-bottom: 20px;
+  background-color: white;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
+}
+
+.main-shop .shop .item:not(:nth-of-type(3n)) {
+  margin-right: 19px;
+}
+
+.main-shop .shop .item h2 {
+  padding: 2px 16px; /* QUEST: top/bottom margin ??? */
+  /*background-color: green;*/
+  /*padding: 0;*/
+
+  margin: 0;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.main-shop .shop .item h2 a {
+  text-decoration: none;
+  color: black;
+}
+
+.main-shop .shop .item h2 span {
+  text-transform: none;
+}
+
+.main-shop .shop .item .buy {
+  position: relative;
+  margin: 10px 16px;
+  margin-bottom: 15px;
+  font-size: 14px;
+  line-height: 18px;
+  background-color: #e5e5e5;
+}
+
+.main-shop .shop .item .buy .price {
+  padding: 13px 30px;
+  color: black;
+}
+
+.main-shop .shop .item .buy .btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 13px 18px;
+  margin: 0;
+}
+
+.main-shop .paginator {
+  margin-top: 25px;
+}
+
+.main-shop .paginator .btn {
+  font-size: 14px;
+  line-height: 18px;
+  padding: 12px 18px;
+  margin-right: 7px;
+}
+
+.main-shop .paginator .btn.active {
+  background-color: white;
+  color: black;
+}
+
 /* ================= */
 /* ===== modal ===== */
 /* ================= */
